syntax = "proto3";

package jurassip;

service CoffeeMaker {
  rpc MachineOn (Empty) returns (MachineResponse);
  rpc MachineOff (Empty) returns (MachineResponse);
  rpc MakeProduct (MakeProductRequest) returns (MachineResponse);
}

message MakeProductRequest {
  string product_type = 1; // e.g., "SingleCoffee"
  string product_strength = 2; // e.g., "Mild"
}

message MachineResponse {
  string message = 1; // e.g., "Your product is ready!"
}

message Empty {}
